Refactor repository structure: consolidate case studies and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-/train
-/train.zip
+/*
+!/Case Study 1 - Wobbly Rosenbrock/
+!/Case Study 2 - SVM on Perturbed Cats vs Dogs/
+!/Case Study 3 - Risk Averse Optimal Control for Wine Fermentation/
+!/.gitignore
